# ReCNN

./: .gitignore  CMakeLists.txt  NN.cuh  NNLayer.cuh  README.md  Utility.cuh  image_split.py  main.cu  main16.cu  main_debug  test_labels.csv  train_labels.csv
Component/: ConvolutionLayerBackward.h  EnumActivation.h  EnumActivationType.h  IFlattenable.h  Kernel3D.h  Matrix.h  NNlayer.h  Serialize.h  TommyDatMatrix.h  Tracebackable.h
Component/Layers/: ConvolutionLayer.h  FClayer.h  LayerBase.h  MaxPoolingLayer.h
Component/TommyDatNeuralNet/: NeuralInput.h  NeuralInputBase.h  NeuralNetwork.h
Models/: mymodel.json  mymodelNoConv.json
Utils/: File.h  GPUMatrixOp.h  GPUPrefixSum.h  GPUSoftMax.h  GPUmax.h  Sum.h  Utility.cuh  json.hpp  stbImage.h
